--- a/public/dev.html
+++ b/public/dev.html
@@ -101,9 +101,9 @@
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-xl-5 offset-xl-1 align-items-center">
+          <div class="col-xl-6 col-md-8 col-10 offset-md-2 offset-xl-1">
             <h1 class="heading">Верстка и&nbsp;настройка&nbsp;CMS</h1>
-            <div class="offer">Дизайн проекта готов и появляется вопрос «что дальше?»</div>
+            <div class="offer">Дизайн проекта готов и&nbsp;появляется вопрос «что&nbsp;дальше?»</div>
           </div>
         </div>
       </div>
@@ -111,7 +111,7 @@
     <div class="content content_background">
       <div class="container p-relative">
         <div class="row">
-          <div class="col-xl-10">
+          <div class="col-xl-10 col-lg-8">
             <h2 class="heading margin-bottom">Верстка по макетам — <span class="text-red">оживляем дизайн</span></h2>
           </div>
           <div class="col-xl-6 offset-xl-1">
@@ -119,37 +119,37 @@
           </div>
           <div class="col-xl-7 offset-xl-1">
             <div class="row justify-content-between">
-              <div class="col-xl-3">
+              <div class="col-xl-3 col-lg-3 col-sm-5">
                 <div class="item">
                   <div class="item__header">html5 + css3</div>
                   <div class="item__offer">соответствие современным стандартам верстки</div>
                 </div>
               </div>
-              <div class="col-xl-3">
+              <div class="col-xl-3 col-lg-3 col-5">
                 <div class="item">
                   <div class="item__header">BEM</div>
                   <div class="item__offer">стандартизированное именование элементов</div>
                 </div>
               </div>
-              <div class="col-xl-3">
+              <div class="col-xl-3 col-lg-3 col-5">
                 <div class="item">
                   <div class="item__header">Speed</div>
                   <div class="item__offer">высокая скорость загрузки&nbsp;сайта</div>
                 </div>
               </div>
-              <div class="col-xl-3">
+              <div class="col-xl-3 col-lg-3 col-5">
                 <div class="item">
                   <div class="item__header">Adaptive</div>
                   <div class="item__offer">адаптация под любой экран&nbsp;устройства</div>
                 </div>
               </div>
-              <div class="col-xl-3">
+              <div class="col-xl-3 col-lg-3 col-5">
                 <div class="item">
                   <div class="item__header">W3C</div>
                   <div class="item__offer">валидный код: отсутствие ошибок</div>
                 </div>
               </div>
-              <div class="col-xl-3">
+              <div class="col-xl-3 col-lg-3 col-sm-5">
                 <div class="item">
                   <div class="item__header">cross-browser </div>
                   <div class="item__offer">корректное отображение в&nbsp;основных браузерах</div>
@@ -157,7 +157,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xl-5 offset-xl-5 margin-top">
+          <div class="col-xl-5 offset-xl-5 col-lg-7 offset-lg-3 margin-top">
             <h3 class="heading heading_small">Не боимся готовых решений и&nbsp;умеем&nbsp;придумывать собственные</h3>
             <p class="offer">При разработке мы стараемся максимально оптимизировать процесс вертски. Небольшие скрипты и&nbsp;решающие не&nbsp;типовые задач пишем «с&nbsp;нуля». А&nbsp;для&nbsp;решения стандартный задач используются готовые плагины с&nbsp;активной поддержкой. </p>
             <p class="offer">Это обеспечивает открытость кода и удобство работы</p><a class="btn btn_primary" href="#">Хочу современный сайт</a>
@@ -180,9 +180,9 @@
       </svg>
       <div class="container p-relative">
         <div class="row">
-          <div class="col-xl-6">
-            <div class="heading heading_medium"><span class="text-red">Подключение и настройка </span>CMS</div>
-            <div class="subheading">Системы управления сайтом (MODX, Wordpress и т.д.)</div>
+          <div class="col-xl-6 col-lg-8">
+            <div class="heading heading_medium"><span class="text-red">Подключение и&nbsp;настройка </span>CMS</div>
+            <div class="subheading">Системы управления сайтом (MODX, Wordpress и&nbsp;т.д.)</div>
             <p class="offer">
               Результат верстки — это статичные web-страницы, чтобы редактировать их самостоятельно нужно иметь&nbsp;базовые знания в&nbsp;HTML-разметке. А CMS обеспечивают удобный пользовательский интерфейс и&nbsp;возможность 
               менять тексты, добавлять новые страницы по готовым шаблонам и многое другое без&nbsp;страха что-то сломать.
@@ -201,7 +201,7 @@
           </div>
         </div>
         <div class="row align-items-center justify-content-center">
-          <div class="col-xl-3 col-lg-5 p-relative"><img class="element element_1" src="../images/comment/dev_comment_0.png"/>
+          <div class="col-xl-3 col-lg-3 p-relative"><img class="element element_1" src="../images/comment/dev_comment_0.png"/>
             <div class="price">
               <div class="price__header">Лендинг</div>
               <div class="price__content">
@@ -214,7 +214,7 @@
               <div class="price__footer">стоимость 13к+(за 3-4 экрана)</div>
             </div>
           </div>
-          <div class="col-xl-3 col-lg-5 p-relative"><img class="element element_2" src="../images/comment/dev_comment_2.png"/>
+          <div class="col-xl-3 col-lg-4 p-relative"><img class="element element_2" src="../images/comment/dev_comment_2.png"/>
             <div class="price price_large">
               <div class="price__header">Сайт-визитка</div>
               <div class="price__content">
@@ -228,7 +228,7 @@
               <div class="price__footer">стоимость 45к+</div>
             </div>
           </div>
-          <div class="col-xl-3 col-lg-5 p-relative"><img class="element element_3" src="../images/comment/dev_comment_1.png"/>
+          <div class="col-xl-3 col-lg-3 p-relative"><img class="element element_3" src="../images/comment/dev_comment_1.png"/>
             <div class="price">
               <div class="price__header">Магазин</div>
               <div class="price__content">
@@ -244,13 +244,13 @@
         </div>
       </div>
       <div class="container content_price__container">
-        <div class="row margin-bottom">
+        <div class="row margin-bottom margin-bottom margin-bottom-sm-none">
           <div class="col-xl-6 offset-xl-2 text-center">
-            <div class="heading heading_small">Обслуживание и поддержка сайта</div>
+            <div class="heading heading_small">Обслуживание и&nbsp;поддержка&nbsp;сайта</div>
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-xl-4 col-lg-5">
+          <div class="col-xl-4 col-md-5">
             <div class="price-line">
               <div class="price-line__title">Ведение рекламной кампании (оптимизация цены клика и бюджета, составление минус слов, мониторинг)</div>
               <div class="price-line__value">от 5к</div>
@@ -268,7 +268,7 @@
               <div class="price-line__value">от 5к</div>
             </div>
           </div>
-          <div class="col-xl-4 col-lg-5">
+          <div class="col-xl-4 col-md-5">
             <div class="price-line">
               <div class="price-line__title">Ведение рекламной кампании (оптимизация цены клика и бюджета, составление минус слов, мониторинг)</div>
               <div class="price-line__value">от 5к</div>
