--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-xl-6 col-md-8 col-10 offset-md-2 offset-xl-1 align-items-center">
+          <div class="col-xl-6 col-md-8 col-10 offset-md-2 offset-xl-1">
             <h1 class="heading">Разработка. Реклама. Продвижение. Интернет-маркетинг.</h1><a class="btn btn_primary" href="#">Обсудим проект?     </a>
           </div>
         </div>
