--- a/public/ad.html
+++ b/public/ad.html
@@ -101,7 +101,7 @@
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-xl-6 col-md-8 col-10 offset-md-2 offset-xl-1 align-items-center">
+          <div class="col-xl-6 col-md-8 col-10 offset-md-2 offset-xl-1">
             <h1 class="heading">Качественная реклама для&nbsp;любого бизнеса</h1>
             <div class="offer last">Быстро. Точно. Эффективно. Новые возможности для&nbsp;вашего бизнеса с&nbsp;рекламой от&nbsp;SOHO.</div>
           </div>
