--- a/public/marketing.html
+++ b/public/marketing.html
@@ -15,7 +15,7 @@
     <header class="header">
       <div class="container">
         <div class="row">
-          <div class="col-3 col-xl-1">
+          <div class="col-3 col-md-2 col-xl-1">
             <svg class="header__logo" viewBox="0 0 80 320" preserveAspectRatio="xMidYMin meet" x="0px" y="0px">
               <g>
                 <path class="header__logo__path" d="M73.8,119.8c0-19.6-15.9-35.4-35.4-35.4S3,100.3,3,119.8s15.8,35.4,35.4,35.4l0,0C57.9,155.2,73.8,139.4,73.8,119.8zM28.5,119.8c0-5.4,4.4-9.8,9.8-9.8s9.8,4.4,9.8,9.8c0,5.4-4.4,9.8-9.8,9.8C32.9,129.7,28.5,125.3,28.5,119.8L28.5,119.8L28.5,119.8z"></path>
@@ -101,7 +101,7 @@
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-xl-5 offset-xl-1 align-items-center">
+          <div class="col-xl-6 col-md-8 col-10 offset-md-2 offset-xl-1">
             <h1 class="heading">Интернет-маркетинг под ключ</h1>
             <div class="offer last">Разработаем систему привлечения новых клиентов индивидуально для вашего бизнеса</div>
           </div>
@@ -116,12 +116,12 @@
           </div>
         </div>
         <div class="row justify-content-between align-items-center">
-          <div class="col-xl-5">
+          <div class="col-xl-5 col-lg-6">
             <p class="offer">Вы задумывались, что побуждает пользователя сделать заказ услуги или купить товар на сайте? Конечно, во многом - это ваша заслуга. Вы предлагаете товар, который нравится людям и они его покупают. </p>
             <p class="offer">Однако, чтобы люди узнали об уникальной услуге или особенном товаре, нужна командная работа профессиональных интернет-маркетологов. Именно они могут не только грамотно рассказать об уникальных свойствах продукта, но и привлечь заинтересованную целевую аудиторию. </p>
-            <p class="offer last">Интернет-маркетинг - универсальный инструмент для любого бизнеса. Он необходим всем отраслям, потому что решает сразу несколько важных задач. </p>
+            <p class="offer last-xl">Интернет-маркетинг - универсальный инструмент для любого бизнеса. Он необходим всем отраслям, потому что решает сразу несколько важных задач. </p>
           </div>
-          <div class="col-xl-4">
+          <div class="col-xl-4 col-lg-4">
             <ol class="list list_ol">
               <li class="list__item">Повышение узнаваемости бренда</li>
               <li class="list__item">Возвращение ушедших клиентов</li>
@@ -233,8 +233,8 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-xl-5 margin-bottom"><img class="img-fluid" src="../images/default.png"/></div>
-          <div class="col-xl-5 margin-bottom"><img class="img-fluid" src="../images/default.png"/></div>
+          <div class="col-lg-5 margin-bottom"><img class="img-fluid" src="../images/default.png"/></div>
+          <div class="col-lg-5 margin-bottom"><img class="img-fluid" src="../images/default.png"/></div>
           <div class="col-xl-10"><a class="btn btn_primary" href="#">Хочу такой же результат</a></div>
         </div>
       </div>
@@ -248,7 +248,7 @@
           </div>
         </div>
         <div class="row align-items-center justify-content-center">
-          <div class="col-xl-3 col-lg-5 p-relative"><img class="element element_1" src="../images/comment/dev_comment_0.png"/>
+          <div class="col-xl-3 col-lg-3 p-relative"><img class="element element_1" src="../images/comment/dev_comment_0.png"/>
             <div class="price">
               <div class="price__header">Есть SEO-продвижение</div>
               <div class="price__content">
@@ -258,7 +258,7 @@
               <div class="price__footer">стоимость 15к+</div>
             </div>
           </div>
-          <div class="col-xl-3 col-lg-5">
+          <div class="col-xl-3 col-lg-4">
             <div class="price price_large">
               <div class="price__header">Есть реклама</div>
               <div class="price__content">
@@ -268,7 +268,7 @@
               <div class="price__footer">стоимость 25к+</div>
             </div>
           </div>
-          <div class="col-xl-3 col-lg-5 p-relative"><img class="element element_3" src="../images/comment/dev_comment_1.png"/>
+          <div class="col-xl-3 col-lg-3 p-relative"><img class="element element_3" src="../images/comment/dev_comment_1.png"/>
             <div class="price">
               <div class="price__header">Нужно больше заказов</div>
               <div class="price__content">
@@ -282,8 +282,8 @@
       </div>
       <div class="container content_price__container">
         <div class="row justify-content-center">
-          <div class="col-xl-7 text-center">
-            <div class="heading heading_small">Окончательную цену вы можете узнать на консультации</div>
+          <div class="col-lg-7 text-center">
+            <div class="heading heading_small">Окончательную цену вы можете узнать на&nbsp;консультации</div>
             <div class="offer last">Стоимость услуги рассчитывается индивидуально в зависимости от проекта. При расчете мы учитываем направление деятельности, а также что именно вы ожидаете получить в качестве результата. После консультации и предварительного анализа вашего ресурса мы составляем список услуг и озвучиваем стоимость. </div>
           </div>
         </div>
@@ -308,7 +308,7 @@
     <footer class="footer">
       <div class="container">
         <div class="row justify-content-between align-items-center">
-          <div class="col">
+          <div class="col-12 col-sm-4 col-lg-2">
             <svg class="footer__logo" viewBox="0 0 320 80" preserveAspectRatio="xMidYMin meet" x="0px" y="0px">
               <g>
                 <path class="footer__logo__path" d="M121.6,1.6C102,1.6,86.2,17.5,86.2,37s15.9,35.4,35.4,35.4S157,56.6,157,37v0C157,17.5,141.2,1.6,121.6,1.6z M121.6,46.9   c-5.4,0-9.8-4.4-9.8-9.8s4.4-9.8,9.8-9.8c5.4,0,9.8,4.4,9.8,9.8C131.4,42.5,127,46.9,121.6,46.9C121.6,46.9,121.6,46.9,121.6,46.9   L121.6,46.9z"></path>
@@ -326,8 +326,8 @@
               </g>
             </svg>
           </div>
-          <div class="col"><a class="footer__email" href="mailto:work@websoho.ru">work@websoho.ru</a></div>
-          <div class="col col-xl-6">
+          <div class="col-12 col-sm-4 col-lg-2"><a class="footer__email" href="mailto:work@websoho.ru">work@websoho.ru</a></div>
+          <div class="col-12 col-xl-6 col-lg-6">
             <ul class="footer__navbar">
               <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Верстка и разработка</a></li>
               <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Реклама</a></li>
