--- a/public/seo.html
+++ b/public/seo.html
@@ -15,7 +15,7 @@
     <header class="header">
       <div class="container">
         <div class="row">
-          <div class="col-3 col-xl-1">
+          <div class="col-3 col-md-2 col-xl-1">
             <svg class="header__logo" viewBox="0 0 80 320" preserveAspectRatio="xMidYMin meet" x="0px" y="0px">
               <g>
                 <path class="header__logo__path" d="M73.8,119.8c0-19.6-15.9-35.4-35.4-35.4S3,100.3,3,119.8s15.8,35.4,35.4,35.4l0,0C57.9,155.2,73.8,139.4,73.8,119.8zM28.5,119.8c0-5.4,4.4-9.8,9.8-9.8s9.8,4.4,9.8,9.8c0,5.4-4.4,9.8-9.8,9.8C32.9,129.7,28.5,125.3,28.5,119.8L28.5,119.8L28.5,119.8z"></path>
@@ -101,9 +101,9 @@
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-xl-5 offset-xl-1 align-items-center">
-            <h1 class="heading">SEO-продвижение для&nbsp;бесплатного&nbsp;трафика</h1>
-            <div class="offer last">Обеспечим поток посетителей на ваш сайт из Яндекс и Google</div>
+          <div class="col-xl-6 col-md-8 col-10 offset-md-2 offset-xl-1">
+            <h1 class="heading">SEO-продвижение для&nbsp;бесплатного трафика</h1>
+            <div class="offer last">Обеспечим поток посетителей на ваш сайт из&nbsp;Яндекс и&nbsp;Google</div>
           </div>
         </div>
       </div>
@@ -123,10 +123,10 @@
             <p class="offer">Более 10 миллиардов запросов каждодневно вводится в поисковые системы для получения информации, услуг или покупки товаров. Более 2 триллионов сайтов в интернете. Использование поисковой оптимизации выведет ваш сайт на первые страницы Яндекса и Google по нужным ключевым словам (это те же запросы, которые вводят люди в поисковую строчку, например «купить диван спб»).</p>
             <p class="offer">Почему нужно быть на первых страницах выдачи? Вспомните, как часто вы заходите дальше 2 или 3 страницы в поиске? Рискнем предположить – крайне редко!</p>
           </div>
-          <div class="col-xl-10 margin-top">
-            <h3 class="heading">Есть сайт, но он не приносит прибыль?</h3>
+          <div class="col-xl-10 margin-top margin-top-sm-none">
+            <h3 class="heading">Есть сайт, но он не&nbsp;приносит прибыль?</h3>
           </div>
-          <div class="col-xl-4 offset-xl-1 margin-top">
+          <div class="col-xl-4 offset-xl-1 col-lg-6 margin-top margin-top-sm-none">
             <p class="offer">Вам необходимо провести комплексный аудит сайта, который покажет слабые стороны и недоработки, нуждающиеся в исправлении. Это позволит разработать рекомендации по оптимизации и улучшению, направленные на увеличение количества заявок и видимости в поисковых системах.</p><a class="btn btn_primary" href="#">Нужен аудит</a>
           </div>
         </div>
@@ -142,11 +142,11 @@
       <div class="container p-relative">
         <div class="row">
           <div class="col-xl-10">
-            <div class="heading heading_medium first">Каких целей достигают с помощью SEO?</div>
+            <div class="heading heading_medium first">Каких целей достигают с&nbsp;помощью SEO?</div>
           </div>
         </div>
-        <div class="row margin-bottom">
-          <div class="col-xl-3 offset-xl-3">
+        <div class="row margin-bottom margin-bottom-sm-none">
+          <div class="col-xl-3 offset-xl-3 col-lg-4 offset-lg-2 col-sm-5">
             <div class="item item_with-icon">
               <svg class="item__icon" viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet">
                 <g>
@@ -157,7 +157,7 @@
               <div class="item__offer">и продаж с сайта</div>
             </div>
           </div>
-          <div class="col-xl-3">
+          <div class="col-xl-3 col-lg-4 col-sm-5">
             <div class="item item_with-icon">
               <svg class="item__icon" viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet">
                 <g>
@@ -168,7 +168,7 @@
               <div class="item__offer">вашей компании</div>
             </div>
           </div>
-          <div class="col-xl-3 offset-xl-3">
+          <div class="col-xl-3 offset-xl-3 col-lg-4 offset-lg-2 col-sm-5">
             <div class="item item_with-icon">
               <svg class="item__icon" viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet">
                 <g>
@@ -179,7 +179,7 @@
               <div class="item__offer">посещаемости сайта</div>
             </div>
           </div>
-          <div class="col-xl-3">
+          <div class="col-xl-3 col-lg-4 col-sm-5">
             <div class="item item_with-icon">
               <svg class="item__icon" viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet">
                 <g>
@@ -192,7 +192,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-xl-6 offset-xl-3">
+          <div class="col-xl-6 offset-xl-3 col-lg-7 offset-lg-3">
             <div class="heading heading_medium">Когда ждать результат?</div>
             <div class="subheading">Системы управления сайтом (MODX, Wordpress и т.д.)</div>
             <p class="offer">
@@ -202,28 +202,28 @@
             <p class="offer last">Мы поможем выбрать подходящую вашему проекту систему, расскажем про плюсы и минусы каждого варианта и не станем задавать непонятных вопросов, а только отвечать на них.</p>
           </div>
         </div>
-        <div class="row align-items-center margin-top margin-bottom">
-          <div class="col-xl-3 offset-xl-3">     
+        <div class="row align-items-center justify-content-center margin-top margin-bottom">
+          <div class="col-xl-3 offset-xl-3 col-sm-7 col-md-4">
             <div class="item item_info text-center">
               <div class="item__title">сайту 1-3 месяца</div>
               <div class="item__offer margin-auto">первые заявки уже через 1-3 месяца стабильный результат через 3-6 месяцев               </div>
             </div>
           </div>
-          <div class="col-xl-1">
+          <div class="col-xl-1 col-md-2">
             <svg class="elements" viewBox="0 0 125 80" preserveAspectRatio="xMidYMin meet">
               <g style="fill: url(#gradient); filter: url(#shadow);">
                 <path d="M101.950,14.113 C99.460,13.495 97.010,13.186 94.602,13.186 C91.737,13.186 89.539,13.853 88.010,15.187 C86.479,16.523 85.715,18.264 85.715,20.412 C85.715,21.747 86.024,22.911 86.643,23.903 C87.261,24.897 88.246,25.856 89.597,26.784 C90.947,27.712 94.145,29.380 99.191,31.789 C105.864,34.980 110.438,38.178 112.912,41.384 C115.386,44.590 116.623,48.521 116.623,53.176 C116.623,59.621 114.304,64.699 109.665,68.410 C105.026,72.121 98.573,73.977 90.305,73.977 C82.688,73.977 75.949,72.545 70.090,69.680 L70.090,55.617 C74.907,57.766 78.984,59.279 82.321,60.158 C85.658,61.037 88.709,61.477 91.477,61.477 C94.797,61.477 97.344,60.842 99.118,59.572 C100.892,58.303 101.779,56.415 101.779,53.908 C101.779,52.509 101.389,51.264 100.607,50.173 C99.826,49.083 98.679,48.033 97.165,47.023 C95.651,46.015 92.567,44.404 87.912,42.189 C83.550,40.139 80.278,38.170 78.098,36.281 C75.916,34.394 74.175,32.196 72.873,29.689 C71.571,27.183 70.920,24.254 70.920,20.900 C70.920,14.586 73.060,9.621 77.341,6.008 C81.621,2.395 87.538,0.588 95.090,0.588 C98.801,0.588 102.341,1.027 105.710,1.906 C109.079,2.785 112.602,4.023 116.281,5.617 L111.398,17.385 C107.590,15.822 104.440,14.732 101.950,14.113 ZM24.719,73.000 L0.500,1.613 L15.783,1.613 L29.211,44.094 C29.959,46.601 30.732,49.522 31.530,52.858 C32.328,56.195 32.824,58.515 33.020,59.816 C33.377,56.822 34.598,51.581 36.682,44.094 L50.207,1.613 L65.490,1.613 L41.223,73.000 L24.719,73.000 Z"></path>
               </g>
             </svg>
           </div>
-          <div class="col-xl-3">
+          <div class="col-xl-3 col-sm-7 col-md-4">
             <div class="item item_info text-center">
               <div class="item__title">сайту более 2 лет</div>
               <div class="item__offer margin-auto">первые заявки уже через 1-3 месяца стабильный результат через 3-6 месяцев</div>
             </div>
           </div>
         </div>
-        <div class="row">
+        <div class="row text-lg-center">
           <div class="col-xl-6 offset-xl-3"><a class="btn btn_primary" href="#">хочу seo-продвижение</a></div>
         </div>
       </div>
@@ -273,8 +273,8 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-xl-6"><img class="img-fluid" src="../images/default.png"/></div>
-          <div class="col-xl-4">
+          <div class="col-xl-6 col-lg-5"><img class="img-fluid margin-bottom-md" src="../images/default.png"/></div>
+          <div class="col-xl-4 col-lg-5">
             <p class="offer text-bold text-uppercase">Что это значит?</p>
             <p class="offer">При увеличении посещаемости на 2537%, количество людей, которое уходило сразу, увеличилось на 0,78%. Мы привели на сайт только тех людей, кто интересовался данными услугами. </p>
           </div>
@@ -286,11 +286,11 @@
         <div class="row">
           <div class="col-xl-6 offset-xl-2 text-center margin-bottom">
             <div class="heading heading_small">Тарифы на продвижение</div>
-            <div class="offer">В зависимости от размера вашего сайта, его состояния и скорости получения необходимого результата, были разработаны 3 основных тарифа</div>
+            <div class="offer">В зависимости от размера вашего сайта, его состояния и скорости получения необходимого результата, были разработаны 3&nbsp;основных тарифа</div>
           </div>
         </div>
         <div class="row align-items-center justify-content-center">
-          <div class="col-xl-3 col-lg-5 p-relative"><img class="element element_1" src="../images/comment/seo_comment_0.png"/>
+          <div class="col-xl-3 col-lg-3 p-relative"><img class="element element_1" src="../images/comment/seo_comment_0.png"/>
             <div class="price">
               <div class="price__header">упрощенный</div>
               <div class="price__content">
@@ -300,7 +300,7 @@
               <div class="price__footer">стоимость 25к в месяц</div>
             </div>
           </div>
-          <div class="col-xl-3 col-lg-5">
+          <div class="col-xl-3 col-lg-4">
             <div class="price price_large">
               <div class="price__header">Стандарт</div>
               <div class="price__content">
@@ -310,7 +310,7 @@
               <div class="price__footer">стоимость 45к в месяц</div>
             </div>
           </div>
-          <div class="col-xl-3 col-lg-5 p-relative"><img class="element element_3" src="../images/comment/seo_comment_2.png"/>
+          <div class="col-xl-3 col-lg-3 p-relative"><img class="element element_3" src="../images/comment/seo_comment_2.png"/>
             <div class="price">
               <div class="price__header">ускоренный</div>
               <div class="price__content">
@@ -351,7 +351,7 @@
     <footer class="footer">
       <div class="container">
         <div class="row justify-content-between align-items-center">
-          <div class="col">
+          <div class="col-12 col-sm-4 col-lg-2">
             <svg class="footer__logo" viewBox="0 0 320 80" preserveAspectRatio="xMidYMin meet" x="0px" y="0px">
               <g>
                 <path class="footer__logo__path" d="M121.6,1.6C102,1.6,86.2,17.5,86.2,37s15.9,35.4,35.4,35.4S157,56.6,157,37v0C157,17.5,141.2,1.6,121.6,1.6z M121.6,46.9   c-5.4,0-9.8-4.4-9.8-9.8s4.4-9.8,9.8-9.8c5.4,0,9.8,4.4,9.8,9.8C131.4,42.5,127,46.9,121.6,46.9C121.6,46.9,121.6,46.9,121.6,46.9   L121.6,46.9z"></path>
@@ -369,8 +369,8 @@
               </g>
             </svg>
           </div>
-          <div class="col"><a class="footer__email" href="mailto:work@websoho.ru">work@websoho.ru</a></div>
-          <div class="col col-xl-6">
+          <div class="col-12 col-sm-4 col-lg-2"><a class="footer__email" href="mailto:work@websoho.ru">work@websoho.ru</a></div>
+          <div class="col-12 col-xl-6 col-lg-6">
             <ul class="footer__navbar">
               <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Верстка и разработка</a></li>
               <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Реклама</a></li>
