--- a/public/blog.html
+++ b/public/blog.html
@@ -8,14 +8,14 @@
     <link href="./css/jquery.jscrollpane.css" rel="stylesheet"/>
     <link href="./css/style.min.css" rel="stylesheet"/>
   </head>
-  <body>
+  <body class="blog">
     <script src="./js/jquery.min.js"></script>
     <script src="./js/jquery.inputmask.js"></script>
     <script src="./js/app.min.js"></script>
     <header class="header">
       <div class="container">
         <div class="row align-items-end">
-          <div class="col-3 col-lg-2 col-xl-2">
+          <div class="col-sm-3 col-lg-2">
             <svg class="header__logo header__logo_inside" viewBox="0 0 320 80" preserveAspectRatio="xMidYMin meet" x="0px" y="0px">
               <g>
                 <path class="header__logo__path" d="M121.6,1.6C102,1.6,86.2,17.5,86.2,37s15.9,35.4,35.4,35.4S157,56.6,157,37v0C157,17.5,141.2,1.6,121.6,1.6z M121.6,46.9   c-5.4,0-9.8-4.4-9.8-9.8s4.4-9.8,9.8-9.8c5.4,0,9.8,4.4,9.8,9.8C131.4,42.5,127,46.9,121.6,46.9C121.6,46.9,121.6,46.9,121.6,46.9   L121.6,46.9z"></path>
@@ -33,7 +33,7 @@
               </g>
             </svg>
           </div>
-          <div class="col-7 col-xl-2"><a class="header__email" href="mailto:work@websoho.ru">work@websoho.ru</a></div>
+          <div class="col-sm-7 col-lg-4"><a class="header__email" href="mailto:work@websoho.ru">work@websoho.ru</a></div>
         </div>
       </div>
       <svg class="header__nav" id="header__nav" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
@@ -54,69 +54,67 @@
         </ul><a class="nav__close" id="navbarClose">Закрыть меню</a>
       </div>
     </header>
-    <div class="blog">
-      <div class="blog__elements elements_01">
-        <svg viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet">
-          <defs>
-            <filter id="shadow" filterUnits="objectBoundingBox" height="130%" width="140%" x="-15%" y="-15%">
-              <feGaussianBlur in="SourceAlpha" result="blur" stdDeviation="3"></feGaussianBlur>
-              <feOffset dx="5" dy="5" in="blur" result="offsetBlurredAlpha"></feOffset>
-              <feComponentTransfer>
-                <feFuncA type="linear" slope="0.2"></feFuncA>
-              </feComponentTransfer>
-              <feMerge>
-                <feMergeNode></feMergeNode>
-                <feMergeNode in="SourceGraphic"></feMergeNode>
-              </feMerge>
-            </filter>
-            <linearGradient id="gradient" data-name="gradient" x1="0%" y1="0%" x2="100%" y2="100%" gradientUnits="userSpaceOnUse">
-              <stop offset="0" stop-color="#222222"></stop>
-              <stop offset="1" stop-color="#343434"></stop>
-            </linearGradient>
-          </defs>
-          <g fill-rule="nonzero">
-            <path style="fill: url(#gradient); filter: url(#shadow);" d="M10,90c0-44.2,35.8-80,80-80s80,35.8,80,80 M10,90c0,44.2,35.8,80,80,80s80-35.8,80-80 M111.3,90c0,11.7-9.5,21.3-21.3,21.3S68.7,101.7,68.7,90 M111.3,90c0-11.7-9.5-21.3-21.3-21.3S68.7,78.3,68.7,90"></path>
-          </g>
-        </svg>
-      </div>
-      <div class="blog__elements elements_02">
-        <svg viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet">
-          <defs>
-            <linearGradient id="gradient_02" data-name="gradient_02" x1="0%" y1="0%" x2="100%" y2="100%" gradientUnits="userSpaceOnUse">
-              <stop offset="0" stop-color="#222222"></stop>
-              <stop offset="1" stop-color="#343434"></stop>
-            </linearGradient>
-          </defs>
-          <g style="fill: url(#gradient_02); filter: url(#shadow);">
-            <rect x="12" y="9.5" width="71" height="160"></rect>
-            <rect x="97" y="9.5" width="71" height="160">           </rect>
-          </g>
-        </svg>
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-9">
-            <div class="heading">Самое актуальное в нашем блоге</div>
-          </div>
-          <div class="col-xl-3"><a class="blog__item blog__item_image" href="#" style="background-image: url('../images/belje-na-verevke.jpg')">
-              <div class="blog__item__title">6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте</div>
-              <div class="blog__item__offer">12.09.2018</div></a></div>
-          <div class="col-xl-3"><a class="blog__item blog__item_image" href="#" style="background-image: url('../images/test-01.jpg')">
-              <div class="blog__item__title">О&nbsp;чем нужно помнить, создавая уникальные тексты?</div>
-              <div class="blog__item__offer">12.09.2018</div></a></div>
-          <div class="col-xl-3"><a class="blog__item blog__item_image" href="#" style="background-image: url('../images/test-02.jpg')">
-              <div class="blog__item__title">Продвижение сайта почти бесплатно</div>
-              <div class="blog__item__offer">12.09.2018</div></a></div>
-          <div class="col-xl-3"><a class="blog__item blog__item_image" href="#" style="background-image: url('../images/belje-na-verevke.jpg')">
-              <div class="blog__item__title">6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте</div>
-              <div class="blog__item__offer">12.09.2018</div></a></div>
-          <div class="col-xl-3"><a class="blog__item blog__item_image" href="#" style="background-image: url('../images/test-01.jpg')">
-              <div class="blog__item__title">О&nbsp;чем нужно помнить, создавая уникальные тексты?</div>
-              <div class="blog__item__offer">12.09.2018</div></a></div>
-          <div class="col-xl-3"><a class="blog__item blog__item_image" href="#" style="background-image: url('../images/test-02.jpg')">
-              <div class="blog__item__title">Продвижение сайта почти бесплатно</div>
-              <div class="blog__item__offer">12.09.2018</div></a></div>
+    <div class="blog__elements elements_01">
+      <svg viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet">
+        <defs>
+          <filter id="shadow" filterUnits="objectBoundingBox" height="130%" width="140%" x="-15%" y="-15%">
+            <feGaussianBlur in="SourceAlpha" result="blur" stdDeviation="3"></feGaussianBlur>
+            <feOffset dx="5" dy="5" in="blur" result="offsetBlurredAlpha"></feOffset>
+            <feComponentTransfer>
+              <feFuncA type="linear" slope="0.2"></feFuncA>
+            </feComponentTransfer>
+            <feMerge>
+              <feMergeNode></feMergeNode>
+              <feMergeNode in="SourceGraphic"></feMergeNode>
+            </feMerge>
+          </filter>
+          <linearGradient id="gradient" data-name="gradient" x1="0%" y1="0%" x2="100%" y2="100%" gradientUnits="userSpaceOnUse">
+            <stop offset="0" stop-color="#222222"></stop>
+            <stop offset="1" stop-color="#343434"></stop>
+          </linearGradient>
+        </defs>
+        <g fill-rule="nonzero">
+          <path style="fill: url(#gradient); filter: url(#shadow);" d="M10,90c0-44.2,35.8-80,80-80s80,35.8,80,80 M10,90c0,44.2,35.8,80,80,80s80-35.8,80-80 M111.3,90c0,11.7-9.5,21.3-21.3,21.3S68.7,101.7,68.7,90 M111.3,90c0-11.7-9.5-21.3-21.3-21.3S68.7,78.3,68.7,90"></path>
+        </g>
+      </svg>
+    </div>
+    <div class="blog__elements elements_02">
+      <svg viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet">
+        <defs>
+          <linearGradient id="gradient_02" data-name="gradient_02" x1="0%" y1="0%" x2="100%" y2="100%" gradientUnits="userSpaceOnUse">
+            <stop offset="0" stop-color="#222222"></stop>
+            <stop offset="1" stop-color="#343434"></stop>
+          </linearGradient>
+        </defs>
+        <g style="fill: url(#gradient_02); filter: url(#shadow);">
+          <rect x="12" y="9.5" width="71" height="160"></rect>
+          <rect x="97" y="9.5" width="71" height="160">           </rect>
+        </g>
+      </svg>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-9">
+          <h1 class="heading heading_blog">Самое актуальное в нашем блоге</h1>
         </div>
+        <div class="col-xl-3 col-md-5"><a class="blog__item blog__item_image" href="#" style="background-image: url('../images/belje-na-verevke.jpg')">
+            <div class="blog__item__title">6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте</div>
+            <div class="blog__item__offer">12.09.2018</div></a></div>
+        <div class="col-xl-3 col-md-5"><a class="blog__item blog__item_image" href="#" style="background-image: url('../images/test-01.jpg')">
+            <div class="blog__item__title">О&nbsp;чем нужно помнить, создавая уникальные тексты?</div>
+            <div class="blog__item__offer">12.09.2018</div></a></div>
+        <div class="col-xl-3 col-md-5"><a class="blog__item blog__item_image" href="#" style="background-image: url('../images/test-02.jpg')">
+            <div class="blog__item__title">Продвижение сайта почти бесплатно</div>
+            <div class="blog__item__offer">12.09.2018</div></a></div>
+        <div class="col-xl-3 col-md-5"><a class="blog__item blog__item_image" href="#" style="background-image: url('../images/belje-na-verevke.jpg')">
+            <div class="blog__item__title">6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте</div>
+            <div class="blog__item__offer">12.09.2018</div></a></div>
+        <div class="col-xl-3 col-md-5"><a class="blog__item blog__item_image" href="#" style="background-image: url('../images/test-01.jpg')">
+            <div class="blog__item__title">О&nbsp;чем нужно помнить, создавая уникальные тексты?</div>
+            <div class="blog__item__offer">12.09.2018</div></a></div>
+        <div class="col-xl-3 col-md-5"><a class="blog__item blog__item_image" href="#" style="background-image: url('../images/test-02.jpg')">
+            <div class="blog__item__title">Продвижение сайта почти бесплатно</div>
+            <div class="blog__item__offer">12.09.2018</div></a></div>
       </div>
     </div>
     <div class="content content_contact inside">
@@ -138,7 +136,7 @@
     <footer class="footer">
       <div class="container">
         <div class="row justify-content-between align-items-center">
-          <div class="col">
+          <div class="col-12 col-sm-4 col-lg-2">
             <svg class="footer__logo" viewBox="0 0 320 80" preserveAspectRatio="xMidYMin meet" x="0px" y="0px">
               <g>
                 <path class="footer__logo__path" d="M121.6,1.6C102,1.6,86.2,17.5,86.2,37s15.9,35.4,35.4,35.4S157,56.6,157,37v0C157,17.5,141.2,1.6,121.6,1.6z M121.6,46.9   c-5.4,0-9.8-4.4-9.8-9.8s4.4-9.8,9.8-9.8c5.4,0,9.8,4.4,9.8,9.8C131.4,42.5,127,46.9,121.6,46.9C121.6,46.9,121.6,46.9,121.6,46.9   L121.6,46.9z"></path>
@@ -156,8 +154,8 @@
               </g>
             </svg>
           </div>
-          <div class="col"><a class="footer__email" href="mailto:work@websoho.ru">work@websoho.ru</a></div>
-          <div class="col col-xl-6">
+          <div class="col-12 col-sm-4 col-lg-2"><a class="footer__email" href="mailto:work@websoho.ru">work@websoho.ru</a></div>
+          <div class="col-12 col-xl-6 col-lg-6">
             <ul class="footer__navbar">
               <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Верстка и разработка</a></li>
               <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Реклама</a></li>
