--- a/public/blog_inside.html
+++ b/public/blog_inside.html
@@ -15,7 +15,7 @@
     <header class="header">
       <div class="container">
         <div class="row">
-          <div class="col-3 col-xl-1">
+          <div class="col-3 col-md-2 col-xl-1">
             <svg class="header__logo" viewBox="0 0 80 320" preserveAspectRatio="xMidYMin meet" x="0px" y="0px">
               <g>
                 <path class="header__logo__path" d="M73.8,119.8c0-19.6-15.9-35.4-35.4-35.4S3,100.3,3,119.8s15.8,35.4,35.4,35.4l0,0C57.9,155.2,73.8,139.4,73.8,119.8zM28.5,119.8c0-5.4,4.4-9.8,9.8-9.8s9.8,4.4,9.8,9.8c0,5.4-4.4,9.8-9.8,9.8C32.9,129.7,28.5,125.3,28.5,119.8L28.5,119.8L28.5,119.8z"></path>
@@ -154,7 +154,7 @@
     <footer class="footer">
       <div class="container">
         <div class="row justify-content-between align-items-center">
-          <div class="col">
+          <div class="col-12 col-sm-4 col-lg-2">
             <svg class="footer__logo" viewBox="0 0 320 80" preserveAspectRatio="xMidYMin meet" x="0px" y="0px">
               <g>
                 <path class="footer__logo__path" d="M121.6,1.6C102,1.6,86.2,17.5,86.2,37s15.9,35.4,35.4,35.4S157,56.6,157,37v0C157,17.5,141.2,1.6,121.6,1.6z M121.6,46.9   c-5.4,0-9.8-4.4-9.8-9.8s4.4-9.8,9.8-9.8c5.4,0,9.8,4.4,9.8,9.8C131.4,42.5,127,46.9,121.6,46.9C121.6,46.9,121.6,46.9,121.6,46.9   L121.6,46.9z"></path>
@@ -172,8 +172,8 @@
               </g>
             </svg>
           </div>
-          <div class="col"><a class="footer__email" href="mailto:work@websoho.ru">work@websoho.ru</a></div>
-          <div class="col col-xl-6">
+          <div class="col-12 col-sm-4 col-lg-2"><a class="footer__email" href="mailto:work@websoho.ru">work@websoho.ru</a></div>
+          <div class="col-12 col-xl-6 col-lg-6">
             <ul class="footer__navbar">
               <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Верстка и разработка</a></li>
               <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Реклама</a></li>
