check page adaptive

--- a/public/blog_inside.html
+++ b/public/blog_inside.html
@@ -15,7 +15,7 @@
     <header class="header">
       <div class="container">
         <div class="row">
-          <div class="col-3 col-md-2 col-xl-1">
+          <div class="col-12 col-md-2 col-xl-1">
             <svg class="header__logo" viewBox="0 0 80 320" preserveAspectRatio="xMidYMin meet" x="0px" y="0px">
               <g>
                 <path class="header__logo__path" d="M73.8,119.8c0-19.6-15.9-35.4-35.4-35.4S3,100.3,3,119.8s15.8,35.4,35.4,35.4l0,0C57.9,155.2,73.8,139.4,73.8,119.8zM28.5,119.8c0-5.4,4.4-9.8,9.8-9.8s9.8,4.4,9.8,9.8c0,5.4-4.4,9.8-9.8,9.8C32.9,129.7,28.5,125.3,28.5,119.8L28.5,119.8L28.5,119.8z"></path>
@@ -33,7 +33,7 @@
               </g>
             </svg>
           </div>
-          <div class="col-7 col-xl-2"><a class="header__email" href="mailto:work@websoho.ru">work@websoho.ru</a></div>
+          <div class="col-12 col-md-4 col-xl-2"><a class="header__email" href="mailto:work@websoho.ru">work@websoho.ru</a></div>
         </div>
       </div>
       <svg class="header__nav" id="header__nav" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
@@ -98,8 +98,11 @@
           <div class="col-sm-10 col-xl-8">
             <div class="page__image" style="background-image:url('../images/image_blog.png');"></div>
             <div class="page__info bg-grey">
-              <div class="page__date">16 апреля 2019</div>
-              <div class="page__person">Автор публикации: <span class="text-color">Елена Павлова</span></div>
+              <div class="page__breadcrumb breadcrumb">
+                <div class="breadcrumb__item"> <a href="#">Главная</a></div>
+                <div class="breadcrumb__item"> <a href="#">Блог</a></div>
+                <div class="breadcrumb__item"> <span>6 способов прокачать первый экран на вашем сайте</span></div>
+              </div>
               <div class="page__reading">Время чтения: <span class="text-bold">5 минут</span></div>
             </div>
             <div class="page__content">
