--- a/public/marketing.html
+++ b/public/marketing.html
@@ -171,15 +171,15 @@
       </svg>
       <div class="container">
         <div class="row justify-content-between">
-          <div class="column">
+          <div class="column col-lg-3 col-sm-5 margin-bottom-md">
             <div class="heading heading_small">Разработка под ваш бизнес</div>
             <div class="offer small">Стратегия создается исходя из направления бизнеса и поставленных вами задач</div>
           </div>
-          <div class="column">
+          <div class="column col-lg-3 col-sm-5 margin-bottom-md">
             <div class="heading heading_small">Комплексная услуга</div>
             <div class="offer small">Для быстрого достижения целей используем весь арсенал маркетинговых инструментов</div>
           </div>
-          <div class="column">
+          <div class="column col-lg-3 col-xl-4">
             <div class="heading heading_small">Проверенные инструменты продаж</div>
             <div class="offer small">Заказав услугу, вы получаете профессионалов, которые создадут работающий инструмент продаж</div>
           </div>
