--- a/public/blog.html
+++ b/public/blog.html
@@ -15,7 +15,7 @@
     <header class="header">
       <div class="container">
         <div class="row align-items-end">
-          <div class="col-sm-3 col-lg-2">
+          <div class="col-md-4 col-lg-2">
             <svg class="header__logo header__logo_inside" viewBox="0 0 320 80" preserveAspectRatio="xMidYMin meet" x="0px" y="0px">
               <g>
                 <path class="header__logo__path" d="M121.6,1.6C102,1.6,86.2,17.5,86.2,37s15.9,35.4,35.4,35.4S157,56.6,157,37v0C157,17.5,141.2,1.6,121.6,1.6z M121.6,46.9   c-5.4,0-9.8-4.4-9.8-9.8s4.4-9.8,9.8-9.8c5.4,0,9.8,4.4,9.8,9.8C131.4,42.5,127,46.9,121.6,46.9C121.6,46.9,121.6,46.9,121.6,46.9   L121.6,46.9z"></path>
@@ -33,7 +33,7 @@
               </g>
             </svg>
           </div>
-          <div class="col-sm-7 col-lg-4"><a class="header__email" href="mailto:work@websoho.ru">work@websoho.ru</a></div>
+          <div class="col-md-6 col-lg-4"><a class="header__email" href="mailto:work@websoho.ru">work@websoho.ru</a></div>
         </div>
       </div>
       <svg class="header__nav" id="header__nav" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
