--- a/public/blog_inside.html
+++ b/public/blog_inside.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>SOHO студия</title>
     <link href="./css/jquery.jscrollpane.css" rel="stylesheet"/>
-    <link href="./css/style.min.css" rel="stylesheet"/>
+    <link href="./css/style.css" rel="stylesheet"/>
   </head>
   <body class="inside-page">
     <script src="./js/jquery.min.js"></script>
@@ -15,7 +15,7 @@
     <header class="header">
       <div class="container">
         <div class="row">
-          <div class="col-12 col-md-2 col-xl-1">
+          <div class="col-10 col-md-1 col-xl-1">
             <svg class="header__logo" viewBox="0 0 80 320" preserveAspectRatio="xMidYMin meet" x="0px" y="0px">
               <g>
                 <path class="header__logo__path" d="M73.8,119.8c0-19.6-15.9-35.4-35.4-35.4S3,100.3,3,119.8s15.8,35.4,35.4,35.4l0,0C57.9,155.2,73.8,139.4,73.8,119.8zM28.5,119.8c0-5.4,4.4-9.8,9.8-9.8s9.8,4.4,9.8,9.8c0,5.4-4.4,9.8-9.8,9.8C32.9,129.7,28.5,125.3,28.5,119.8L28.5,119.8L28.5,119.8z"></path>
@@ -33,7 +33,8 @@
               </g>
             </svg>
           </div>
-          <div class="col-12 col-md-4 col-xl-2"><a class="header__email" href="mailto:work@websoho.ru">work@websoho.ru</a></div>
+          <div class="col-10 col-md-4 col-xl-2"><a class="header__email" href="mailto:work@websoho.ru">work@websoho.ru</a></div>
+          <div class="col-10 col-md-5 col-xl-6"><a class="header__link" href="#">Вернуться в блог</a></div>
         </div>
       </div>
       <svg class="header__nav" id="header__nav" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
