--- a/public/answer.html
+++ b/public/answer.html
@@ -35,7 +35,7 @@
             </svg>
           </div>
           <div class="col-10 col-md-4 col-xl-2"><a class="header__email" href="mailto:work@websoho.ru">work@websoho.ru</a></div>
-          <div class="col-10 col-md-5 col-xl-6"><a class="header__link" href="#">Вернуться в блог</a></div>
+          <div class="col-10 col-md-5 col-xl-6"><a class="header__link" href="#">Вернуться назад</a></div>
         </div>
       </div>
       <svg class="header__nav" id="header__nav" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
@@ -98,29 +98,28 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-sm-10 col-xl-8">
-            <div class="page__image" style="background-image:url('../images/image_blog.png');"></div>
-            <div class="page__info bg-grey">
-              <div class="page__breadcrumb breadcrumb">
-                <div class="breadcrumb__item"> <a href="#">Главная</a></div>
-                <div class="breadcrumb__item"> <a href="#">Блог</a></div>
-                <div class="breadcrumb__item"> <span>6 способов прокачать первый экран на вашем сайте</span></div>
-              </div>
-              <div class="page__reading">Время чтения: <span class="text-bold">5 минут</span></div>
-            </div>
+            <div class="page__image" style="background-image:url('../images/image_thanks.jpg');"></div>
             <div class="page__content">
-              <h1 class="heading">6 способов прокачать первый экран на вашем сайте</h1>
-              <p>Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?</p>
-              <blockquote>Первое, на что обращает внимание посетитель сайта — первый экран. Это — визитная карточка всего сайта. Остальной контент пользователь увидит потом, поэтому важно заинтересовать его с первых секунд. В данной статье предлагаем вам простые способы сделать дизайн главной страницы и особенно первого экрана качественным и информативным.</blockquote><img src="../images/image_post.png" alt="" title=""/>
-              <h2>Заголовок h2</h2>
-              <p>Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?</p>
-              <h3>Заголовок h3</h3>
-              <p>Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?</p>
-              <h4>Заголовок h4</h4>
-              <p>Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?</p>
-              <h5>Заголовок h5</h5>
-              <p>Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?</p>
+              <h1 class="heading">Спасибо за оставленную заявку!</h1>
+              <p>Мы постараемся ответить вам как можно скорее.</p>
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+    <div class="content post post_portfolio">
+      <div class="container">
+        <div class="heading">Реализованные <a class="link" href="#">проекты</a></div>
+        <div class="row justify-content-center justify-content-lg-between">
+          <div class="col-lg-3 col-md-5"><a class="post__item post__item_image" href="#" style="background-image: url('../images/belje-na-verevke.jpg')">
+              <div class="post__item__title">6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте</div>
+              <div class="post__item__offer">12.09.2018</div></a></div>
+          <div class="col-lg-3 col-md-5"><a class="post__item post__item_image" href="#" style="background-image: url('../images/test-01.jpg')">
+              <div class="post__item__title">О&nbsp;чем нужно помнить, создавая уникальные тексты?</div>
+              <div class="post__item__offer">12.09.2018</div></a></div>
+          <div class="col-lg-3 col-md-10"><a class="post__item post__item_last post__item_image" href="#" style="background-image: url('../images/test-02.jpg')">
+              <div class="post__item__title">Продвижение сайта почти бесплатно</div>
+              <div class="post__item__offer">12.09.2018</div></a></div>
         </div>
       </div>
     </div>
@@ -150,8 +149,8 @@
               <button class="btn btn_primary" type="submit">Хочу больше клиентов</button>
             </form>
           </div>
-          <div class="col-xl-3">
-            <div class="offer">How one dull get busy dare far. At principle perfectly by sweetness do. Decisively advantages nor expression unpleasing she led met. Indulgence contrasted sufficient to unpleasant in in insensible favourable. Hard do me sigh with west same lady. So by colonel hearted ferrars. Small for ask shade water manor think men begin. Equally he minutes my hastily. Estate was tended ten boy nearer seemed. Estate was tended ten boy nearer seemed. Up hung mr we give rest half. Their saved linen downs tears son add music. </div>
+          <div class="col-lg-3">
+            <div class="offer last">How one dull get busy dare far. At principle perfectly by sweetness do. Decisively advantages nor expression unpleasing she led met. Indulgence contrasted sufficient to unpleasant in in insensible favourable. Hard do me sigh with west same lady. So by colonel hearted ferrars. Small for ask shade water manor think men begin. Equally he minutes my hastily. Estate was tended ten boy nearer seemed. Estate was tended ten boy nearer seemed. Up hung mr we give rest half. Their saved linen downs tears son add music. </div>
           </div>
         </div>
       </div>
