--- a/public/portfolio_inside.html
+++ b/public/portfolio_inside.html
@@ -35,7 +35,7 @@
             </svg>
           </div>
           <div class="col-10 col-md-4 col-xl-2"><a class="header__email" href="mailto:work@websoho.ru">work@websoho.ru</a></div>
-          <div class="col-10 col-md-5 col-xl-6"><a class="header__link" href="#">Вернуться в блог</a></div>
+          <div class="col-10 col-md-5 col-xl-6"><a class="header__link" href="#">Вернуться в портфолио</a></div>
         </div>
       </div>
       <svg class="header__nav" id="header__nav" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
@@ -56,8 +56,8 @@
         </ul><a class="nav__close" id="navbarClose">Закрыть меню</a>
       </div>
     </header>
-    <div class="post page">
-      <div class="post__elements elements_01">
+    <div class="blog page">
+      <div class="blog__elements elements_01">
         <svg viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet">
           <defs>
             <filter id="shadow" filterUnits="objectBoundingBox" height="130%" width="140%" x="-15%" y="-15%">
@@ -81,7 +81,7 @@
           </g>
         </svg>
       </div>
-      <div class="post__elements elements_02">
+      <div class="blog__elements elements_02">
         <svg viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet">
           <defs>
             <linearGradient id="gradient_02" data-name="gradient_02" x1="0%" y1="0%" x2="100%" y2="100%" gradientUnits="userSpaceOnUse">
@@ -108,9 +108,10 @@
               <div class="page__reading">Время чтения: <span class="text-bold">5 минут</span></div>
             </div>
             <div class="page__content">
-              <h1 class="heading">6 способов прокачать первый экран на вашем сайте</h1>
+              <h1 class="heading heading_portfolio">6 способов прокачать первый экран на вашем сайте</h1>
+              <p class="subheading">6 способов прокачать первый экран на вашем сайте</p>
               <p>Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?</p>
-              <blockquote>Первое, на что обращает внимание посетитель сайта — первый экран. Это — визитная карточка всего сайта. Остальной контент пользователь увидит потом, поэтому важно заинтересовать его с первых секунд. В данной статье предлагаем вам простые способы сделать дизайн главной страницы и особенно первого экрана качественным и информативным.</blockquote><img src="../images/image_post.png" alt="" title=""/>
+              <blockquote>Первое, на что обращает внимание посетитель сайта — первый экран. Это — визитная карточка всего сайта. Остальной контент пользователь увидит потом, поэтому важно заинтересовать его с первых секунд. В данной статье предлагаем вам простые способы сделать дизайн главной страницы и особенно первого экрана качественным и информативным.</blockquote><img src="../images/image_blog.png" alt="" title=""/>
               <h2>Заголовок h2</h2>
               <p>Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?</p>
               <h3>Заголовок h3</h3>
@@ -124,18 +125,18 @@
         </div>
       </div>
     </div>
-    <div class="content post post_preview">
+    <div class="content blog">
       <div class="container">
         <div class="heading">Самое актуальное в нашем <a class="link" href="#">блоге</a></div>
         <div class="row justify-content-between">
-          <div class="col-lg-3 col-md-5 post__item"><a class="post__item__title" href="#">6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте</a>
-            <div class="post__item__offer">Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.</div>
+          <div class="col-xl-3 blog__item"><a class="blog__item__title" href="#">6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте</a>
+            <div class="blog__item__offer">Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.</div>
           </div>
-          <div class="col-lg-3 col-md-5 post__item"><a class="post__item__title" href="#">О&nbsp;чем нужно помнить, создавая уникальные тексты?</a>
-            <div class="post__item__offer">Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.</div>
+          <div class="col-xl-3 blog__item"><a class="blog__item__title" href="#">О&nbsp;чем нужно помнить, создавая уникальные тексты?</a>
+            <div class="blog__item__offer">Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.</div>
           </div>
-          <div class="col-lg-3 col-md-10 post__item post__item_last"><a class="post__item__title" href="#">Продвижение сайта почти бесплатно</a>
-            <div class="post__item__offer">Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.</div>
+          <div class="col-xl-3 blog__item"><a class="blog__item__title" href="#">Продвижение сайта почти бесплатно</a>
+            <div class="blog__item__offer">Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.</div>
           </div>
         </div>
       </div>
