--- a/public/design.html
+++ b/public/design.html
@@ -117,7 +117,7 @@
             <h2 class="heading margin-bottom">Дизайн полиграфии</h2>
           </div>
           <div class="col-xl-6">
-            <p class="offer">
+            <p class="offer margin-bottom">
               Разработка дизайна полиграфической продукции с учетом всех требований типографии: качественный и&nbsp;стильные макеты визиток, листовок и&nbsp;всего, что может понадобится вам для презентации компании.
               Вы получаете на&nbsp;руки готовые к&nbsp;печати файлы, подготовленные с&nbsp;учётом технических 
               требований, фирменного стиля и&nbsp;ваших пожеланий к&nbsp;оформлению.
@@ -207,13 +207,13 @@
         </div>
         <div class="row justify-content-center">              
           <div class="col-xl-8 text-center">
-            <div class="content__btn">
-              <div class="content__btn__link">Оформление фудкорта</div>
-              <div class="content__btn__link">Разработка сценического баннера</div>
-              <div class="content__btn__link">Создание тантамарески</div>
-              <div class="content__btn__link">Уличные вывески</div>
-              <div class="content__btn__link">Брендирование эскалатора</div>
-              <div class="content__btn__link">декор открытых площадок</div>
+            <div class="content__group">
+              <div class="content__group__link">Оформление фудкорта</div>
+              <div class="content__group__link">Разработка сценического баннера</div>
+              <div class="content__group__link">Создание тантамарески</div>
+              <div class="content__group__link">Уличные вывески</div>
+              <div class="content__group__link">Брендирование эскалатора</div>
+              <div class="content__group__link">декор открытых площадок</div>
             </div>
           </div>
         </div>
@@ -304,12 +304,13 @@
           <div class="col-12 col-sm-4 col-lg-2"><a class="footer__email" href="mailto:work@websoho.ru">work@websoho.ru</a></div>
           <div class="col-12 col-xl-6 col-lg-6">
             <ul class="footer__navbar">
+              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Дизайн</a></li>
               <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Верстка и разработка</a></li>
-              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Реклама</a></li>
-              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Продвижение</a></li>
+              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Seo-продвижение</a></li>
+              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">ИНТЕРНЕТ МАРКЕТИНГ</a></li>
+              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">КОНТЕКСТНАЯ РЕКЛАМА</a></li>
               <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Портфолио</a></li>
               <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Блог</a></li>
-              <li class="footer__navbar__item last"><a class="footer__navbar__link" href="#">Дизайн</a></li>
             </ul>
           </div>
         </div>
