--- a/public/marketing.html
+++ b/public/marketing.html
@@ -104,7 +104,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xl-6 col-md-8 col-10 offset-md-2 offset-xl-1">
-            <h1 class="heading">Интернет-маркетинг под ключ</h1>
+            <h1 class="heading">Интернет-маркетинг под&nbsp;ключ</h1>
             <div class="offer last">Разработаем систему привлечения новых клиентов индивидуально для вашего бизнеса</div>
           </div>
         </div>
@@ -118,10 +118,10 @@
           </div>
         </div>
         <div class="row justify-content-between align-items-center">
-          <div class="col-xl-5 col-lg-6">
+          <div class="col-xl-5 col-lg-6 col-comment">
             <p class="offer">Вы задумывались, что побуждает пользователя сделать заказ услуги или купить товар на сайте? Конечно, во многом - это ваша заслуга. Вы предлагаете товар, который нравится людям и они его покупают. </p>
             <p class="offer">Однако, чтобы люди узнали об уникальной услуге или особенном товаре, нужна командная работа профессиональных интернет-маркетологов. Именно они могут не только грамотно рассказать об уникальных свойствах продукта, но и привлечь заинтересованную целевую аудиторию. </p>
-            <p class="offer last-xl">Интернет-маркетинг - универсальный инструмент для любого бизнеса. Он необходим всем отраслям, потому что решает сразу несколько важных задач. </p>
+            <p class="offer last-xl">Интернет-маркетинг - универсальный инструмент для любого бизнеса. Он необходим всем отраслям, потому что решает сразу несколько важных задач. </p><img class="element element_comment" src="./images/comment/arrow.png"/>
           </div>
           <div class="col-xl-4 col-lg-4">
             <ol class="list list_ol">
@@ -188,35 +188,47 @@
         </div>
       </div>
     </div>
-    <div class="content content_padding bg-white p-relative"><img class="element img-fluid" src="../images/marketing.png"/>
+    <div class="content content_mockup bg-white p-relative"><img class="element element img-fluid" src="../images/marketing.png"/>
       <div class="container p-relative">
         <div class="row">
           <div class="col-xl-7 offset-xl-3">
             <h3 class="heading">Услуги по интернет-маркетингу</h3>
             <p class="offer">Обратившись к нам, вы получите эффективный инструмент продаж. Мы не просто знаем о том, как сделать сайт продающим, но и сами внедряем разработки, которые увеличивают количество посетителей уже в первый месяц! </p>
-            <div class="content__btn"><a class="content__btn__link" href="#">Маркетинговая аналитика</a><a class="content__btn__link" href="#">Брендинг</a><a class="content__btn__link" href="#">Составление портрета пользователя</a><a class="content__btn__link" href="#">Квиз-маркетинг</a><a class="content__btn__link" href="#">Создание воронки продаж</a><a class="content__btn__link" href="#">Создание посадочных страниц</a></div>
+            <div class="content__group">
+              <div class="content__group__link">Маркетинговая аналитика</div>
+              <div class="content__group__link">Брендинг</div>
+              <div class="content__group__link">Составление портрета пользователя</div>
+              <div class="content__group__link">Квиз-маркетинг</div>
+              <div class="content__group__link">Создание воронки продаж</div>
+              <div class="content__group__link">Создание посадочных страниц</div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="content content_project project bg-grey">
+    <div class="content project bg-grey">
       <div class="container">
         <div class="row">
           <div class="col-xl-10">
-            <h4 class="heading heading_medium margin-bottom">Проект по интернет-маркетингу</h4>
+            <h4 class="heading heading_medium">Проект по интернет-маркетингу</h4>
             <div class="offer">Один из последних проектов SOHO</div>
           </div>
           <div class="col-xl-5">
-            <div class="project__task margin-bottom">
+            <div class="project__task">
               <div class="project__task__item">Задача</div>
               <div class="project__task__content"> 
                 <p class="offer">Проработать маркетинговую составляющую сайта: разработка УТП, преимуществ, продающих текстов и форм. Сделать его привлекательным, наполнить актуальной информацией, подготовить все страницы к запуску рекламы. </p>
                 <p class="offer">Настроить рекламную кампанию, повысить число заявок с нее и из поисковых систем.</p>
+                <ul>
+                  <li>переработать всю информацию на сайте для повышения количества заявок;</li>
+                  <li>улучшить общее восприятие информации;</li>
+                  <li>изменить дизайн сайта на более современный и&nbsp;внушающий&nbsp;доверие</li>
+                </ul>
               </div>
             </div>
           </div>
           <div class="col-xl-5">
-            <div class="project__task margin-bottom">
+            <div class="project__task">
               <div class="project__task__item">Решение</div>
               <div class="project__task__content">
                 <p class="offer">Работы начали с проработки структуры страниц и составления прототипов. Каждый блок продумывался, исходя из реальных преимуществ компании и отдельной услуги. </p>
@@ -227,7 +239,7 @@
         </div>
         <div class="row margin-bottom">
           <div class="col-xl-10">
-            <p class="heading heading_small margin-bottom">Достигнутый эффект</p>
+            <p class="heading heading_small">Достигнутый эффект</p>
           </div>
           <div class="col-xl-6">
             <p class="offer">После всех проведенных на сайте работ, конверсия выросла с 0,1% до 13%. </p>
@@ -295,7 +307,7 @@
       <div class="container">
         <div class="row align-items-end">
           <div class="col-xl-6">
-            <h4 class="heading">Нужны клиенты?<br/>Мы знаем как их получить</h4>
+            <h4 class="heading heading_medium">Нужны клиенты?<br/>Мы знаем как их получить</h4>
             <form class="form form_inline" action="">
               <input class="in-phone input-text" type="tel" placeholder="Ваш контактный телефон" value=""/>
               <button class="btn btn_primary" type="submit">Да, нужны</button>
@@ -331,12 +343,13 @@
           <div class="col-12 col-sm-4 col-lg-2"><a class="footer__email" href="mailto:work@websoho.ru">work@websoho.ru</a></div>
           <div class="col-12 col-xl-6 col-lg-6">
             <ul class="footer__navbar">
+              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Дизайн</a></li>
               <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Верстка и разработка</a></li>
-              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Реклама</a></li>
-              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Продвижение</a></li>
+              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Seo-продвижение</a></li>
+              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">ИНТЕРНЕТ МАРКЕТИНГ</a></li>
+              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">КОНТЕКСТНАЯ РЕКЛАМА</a></li>
               <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Портфолио</a></li>
               <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Блог</a></li>
-              <li class="footer__navbar__item last"><a class="footer__navbar__link" href="#">Дизайн</a></li>
             </ul>
           </div>
         </div>
