--- a/public/ad.html
+++ b/public/ad.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>SOHO студия</title>
+    <link href="./css/jquery.fancybox.min.css" rel="stylesheet"/>
     <link href="./css/jquery.jscrollpane.css" rel="stylesheet"/>
-    <link href="./css/style.min.css" rel="stylesheet"/>
+    <link href="./css/style.css" rel="stylesheet"/>
   </head>
   <body class="ad">
     <script src="./js/jquery.min.js"></script>
@@ -111,8 +112,8 @@
     <div class="content p-relative content_element"><img class="element element_1" src="../images/google-logo.png"/><img class="element element_2" src="../images/yandex-logo.png"/>
       <div class="container">
         <div class="row">
-          <div class="col-xl-10 col-lg-8">
-            <h2 class="heading margin-bottom">Зачем нужна <span class="text-green">реклама в&nbsp;Яндекс и&nbsp;Google</span></h2>
+          <div class="col-xl-9 col-lg-8">
+            <h2 class="heading margin-bottom">Зачем нужна настройка контекстной <span class="text-green">рекламы в&nbsp;Яндекс и&nbsp;Google</span></h2>
           </div>
           <div class="col-xl-6 offset-xl-1">
             <ol class="list list_ol row justify-content-between align-items-center margin-bottom margin-bottom-xs-none">
@@ -124,7 +125,7 @@
           </div>
           <div class="col-xl-5 offset-xl-1">
             <h3 class="heading heading_small margin-top">Почему выбирают рекламу от SOHO?</h3>
-            <p class="offer">Профессиональная настройка рекламы с использованием наиболее эффективных методов Яндекс и Google. Разработка преимуществ и уникальных торговых предложений (УТП), чтобы получить высокую рентабельность вложений. </p>
+            <p class="offer margin-bottom">Профессиональная настройка рекламы с использованием наиболее эффективных методов Яндекс и Google. Разработка преимуществ и уникальных торговых предложений (УТП), чтобы получить высокую рентабельность вложений. </p>
           </div>
           <div class="col-xl-6 offset-xl-1">
             <div class="row margin-bottom">
@@ -136,7 +137,7 @@
                     </g>
                   </svg>
                   <div class="item__title">БЫСТРО </div>
-                  <div class="item__offer">Настройка и запуск от 1 до 5 дней</div>
+                  <div class="item__offer">Настройка и запуск рекламной кампании в срок от 1 до 5 дней</div>
                 </div>
               </div>
               <div class="col-sm-5">
@@ -147,7 +148,7 @@
                     </g>
                   </svg>
                   <div class="item__title">ТОЧНО </div>
-                  <div class="item__offer">Находим только целевую аудиторию</div>
+                  <div class="item__offer">Находим только целевую аудиторию, что снижает стоимость клиента</div>
                 </div>
               </div>
               <div class="col-sm-5">
@@ -158,7 +159,7 @@
                     </g>
                   </svg>
                   <div class="item__title">Прозрачно </div>
-                  <div class="item__offer">Вы получите полный доступ к&nbsp;статистике</div>
+                  <div class="item__offer">Вы получите полный доступ к&nbsp;статистике и отчет в конце месяца</div>
                 </div>
               </div>
               <div class="col-sm-5">
@@ -169,7 +170,7 @@
                     </g>
                   </svg>
                   <div class="item__title">ЭФФЕКТИВНО </div>
-                  <div class="item__offer">Постоянный контроль и&nbsp;оптимизация&nbsp;рекламы               </div>
+                  <div class="item__offer">Постоянный контроль кампании и&nbsp;оптимизация&nbsp;рекламы               </div>
                 </div>
               </div>
             </div>
@@ -178,26 +179,25 @@
         <div class="row align-items-end">
           <div class="col-xl-4 offset-xl-2 col-lg-6 offset-lg-3">
             <p class="heading heading_small">У вас <span class="text-green">уже есть реклама, </span>но&nbsp;вы недовольны результатами?</p>
-            <p class="offer">Клиентов, которые заказывают товар, очень мало? Конечная стоимость клиента слишком высока? Затраты на рекламу больше, чем доход от нее? Вам кажется, что бюждет просто “сливают”?</p>
-            <div class="margin-bottom-lg"><a class="btn btn_primary" href="#">Анализ рекламной кампании</a></div>
+            <p class="offer">Клиентов, которые заказывают товар, очень мало? Конечная стоимость клиента слишком высока? Затраты на рекламу больше, чем доход от нее? Вам кажется, что бюждет просто “сливают”?</p><a class="btn btn_primary margin-bottom-lg" href="#">Анализ рекламной кампании</a>
           </div>
           <div class="col-xl-4 col-md-8 offset-md-2 col-lg-6 offset-lg-3 offset-xl-0">
-            <p class="offer offer_subtitle text-uppercase text-bold">Выход есть — <span class="text-darkblue">многофакторный анализ                  </span></p>
+            <p class="offer offer_subtitle text-uppercase text-bold">Выход есть — <span class="text-green">многофакторный анализ </span>НАСТРОЙКИ КОНТЕКСТНОЙ РЕКЛАМЫ              </p>
             <p class="offer small">Он проводится на всех уровнях: рынок, стратегия, потребность в товаре, размер ставок и корректировок</p>
-            <p class="offer last"><span class="text-bold">В результате </span>мы составим список рекомендаций: как улучшить рекламную кампанию и страницы сайта. Это приведет к повышению эффективности и увеличению вашего дохода, одновременно помогая оценить работу специалистов, которые в данный момент занимаются ведением рекламы Яндекс и/или Google.            </p>
+            <p class="offer small last"><span class="text-bold">В результате </span>мы составим список рекомендаций: как улучшить рекламную кампанию и страницы сайта. Это приведет к повышению эффективности и увеличению вашего дохода, одновременно помогая оценить работу специалистов, которые в данный момент занимаются ведением рекламы Яндекс и/или Google.            </p>
           </div>
         </div>
       </div>
     </div>
-    <div class="content content_project project">
+    <div class="content project">
       <div class="container">
         <div class="row">
           <div class="col-xl-10">
-            <h4 class="heading heading_medium margin-bottom">Пример рекламной кампании</h4>
+            <h4 class="heading heading_medium">Пример рекламной кампании</h4>
             <div class="offer">Один из последних проектов SOHO</div>
           </div>
           <div class="col-xl-5 col-lg-8">
-            <div class="project__task margin-bottom">
+            <div class="project__task">
               <div class="project__task__item">Задача</div>
               <div class="project__task__content"> 
                 <p class="offer last">Необходимо было быстро настроить рекламную кампанию в Директе, для скорейшего обеспечения клиента заказами. После этого настроить рекламу в Google. Одно из ключевых требований - только целевая аудитория и ни в коем случае не выходить за рамки бюджета. </p>
@@ -205,7 +205,7 @@
             </div>
           </div>
           <div class="col-xl-5 col-lg-8">
-            <div class="project__task margin-bottom">
+            <div class="project__task">
               <div class="project__task__item">Решение</div>
               <div class="project__task__content">
                 <p class="offer last">Изначально разработали рекомендации по улучшению посадочных страниц, чтобы посетители видели необходимую информацию, проходили большую часть этапов продажи на странице и оставляли заявку. Пока вносились правки на сайте, собрали ключевые слова, разработали УТП, проработали тексты объявлений, настроили счетчики, аналитику  и цели для возможности точной оценки эффективности рекламы.</p>
@@ -213,17 +213,15 @@
             </div>
           </div>
         </div>
-        <div class="row margin-bottom-xs">
-          <div class="col-xl-8">
+        <div class="row">
+          <div class="col-xl-5 margin-bottom-xs">
             <p class="heading heading_small">Результаты через 1 месяц</p>
             <p class="offer last">
               Бюджет рекламной кампании был израсходован только на 30%, а все плановые показатели по заявкам были выполнены. Оптимизация велась каждый день (тестовое ведение рекламы именно поэтому такое дорогое), 
               нам удалось избежать нецелевого трафика и получить заказы по согласованной цене заявки.
             </p>
           </div>
-        </div>
-        <div class="row margin-bottom-xs">
-          <div class="col-xl-8">
+          <div class="col-xl-5 margin-bottom-xs">
             <p class="heading heading_small">Результаты через 2 месяца</p>
             <p class="offer last">Сумма расходов увеличилась на 1520 руб. за месяц. И вот каких результатов нам удалось достичь:</p>
           </div>
@@ -260,7 +258,7 @@
             <p class="offer">Цена клика стала еще меньше в&nbsp;1,9 раза, а&nbsp;количество заявок увеличилось на&nbsp;57%</p>
             <p class="offer"> <a class="btn btn_primary" href="#">Хочу эффективную рекламу</a></p>
           </div>
-          <div class="col-xl-4 col-md-4 margin-top-sm"><img class="img-fluid" src="../images/test-03.png"/></div>
+          <div class="col-xl-4 col-md-4 margin-top-sm"><img class="img-fluid img-border" src="../images/graphic-ad-portfolio.svg"/></div>
         </div>
       </div>
     </div>
@@ -379,7 +377,7 @@
       <div class="container">
         <div class="row align-items-end">
           <div class="col-xl-6">
-            <h4 class="heading">Нужны клиенты?<br/>Мы знаем как их получить</h4>
+            <h4 class="heading heading_medium">Нужны клиенты?<br/>Мы знаем как их получить</h4>
             <form class="form form_inline" action="">
               <input class="in-phone input-text" type="tel" placeholder="Ваш контактный телефон" value=""/>
               <button class="btn btn_primary" type="submit">Да, нужны</button>
@@ -415,16 +413,31 @@
           <div class="col-12 col-sm-4 col-lg-2"><a class="footer__email" href="mailto:work@websoho.ru">work@websoho.ru</a></div>
           <div class="col-12 col-xl-6 col-lg-6">
             <ul class="footer__navbar">
+              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Дизайн</a></li>
               <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Верстка и разработка</a></li>
-              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Реклама</a></li>
-              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Продвижение</a></li>
+              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Seo-продвижение</a></li>
+              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">ИНТЕРНЕТ МАРКЕТИНГ</a></li>
+              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">КОНТЕКСТНАЯ РЕКЛАМА</a></li>
               <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Портфолио</a></li>
               <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Блог</a></li>
-              <li class="footer__navbar__item last"><a class="footer__navbar__link" href="#">Дизайн</a></li>
             </ul>
           </div>
         </div>
       </div>
     </footer>
+    <svg class="go-to-top" x="0px" y="0px" viewBox="0 0 477.175 477.175" xml:space="preserve">
+      <g>
+        <path d="M145.188,238.575l215.5-215.5c5.3-5.3,5.3-13.8,0-19.1s-13.8-5.3-19.1,0l-225.1,225.1c-5.3,5.3-5.3,13.8,0,19.1l225.1,225   c2.6,2.6,6.1,4,9.5,4s6.9-1.3,9.5-4c5.3-5.3,5.3-13.8,0-19.1L145.188,238.575z"></path>
+      </g>
+    </svg>
+    <div class="modal modal_dark" id="callModal">
+      <p class="modal__title">Оставьте сообщение для нас и мы перезвоним</p>
+      <form class="form form_column" action="">
+        <input class="input-text" type="text" placeholder="Ваше имя" value=""/>
+        <input class="in-phone input-text" type="tel" placeholder="Контактный телефон" value=""/>
+        <textarea class="input-text" name="" placeholder="Опишите здесь, каких целей вы хотите достичь с помощью вашего сайта"></textarea>
+        <button class="btn btn_primary" type="submit">Обсудим проект</button>
+      </form>
+    </div>
   </body>
 </html>
