--- a/public/dev.html
+++ b/public/dev.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>SOHO студия</title>
+    <link href="./css/jquery.fancybox.min.css" rel="stylesheet"/>
     <link href="./css/jquery.jscrollpane.css" rel="stylesheet"/>
-    <link href="./css/style.min.css" rel="stylesheet"/>
+    <link href="./css/style.css" rel="stylesheet"/>
   </head>
   <body class="dev">
     <script src="./js/jquery.min.js"></script>
@@ -102,7 +103,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xl-6 col-md-8 col-10 offset-md-2 offset-xl-1">
-            <h1 class="heading">Верстка и&nbsp;настройка&nbsp;CMS</h1>
+            <h1 class="heading">Верстка сайта и&nbsp;настройка&nbsp;CMS</h1>
             <div class="offer">Дизайн проекта готов и&nbsp;появляется вопрос «что&nbsp;дальше?»</div>
           </div>
         </div>
@@ -293,14 +294,14 @@
       <div class="container">
         <div class="row align-items-end">
           <div class="col-xl-6">
-            <h4 class="heading">Нужны клиенты? <br/> Мы знаем как их получить</h4>
+            <h4 class="heading heading_medium">Нужны клиенты? <br/> Мы знаем как их получить</h4>
             <form class="form form_inline" action="">
               <input class="in-phone input-text" type="tel" placeholder="Ваш контактный телефон" value=""/>
               <button class="btn btn_primary" type="submit">Обсудим проект</button>
             </form>
           </div>
           <div class="col-xl-3">
-            <div class="offer">Многие компании, предлагая свои услуги, говорят о том, какие они классные. Мы в первую очередь думаем о вас и вашем комфорте от сотрудничества с SOHO. Поэтому мы расскажем о том, что вы получите, обратившись к нам.</div>
+            <div class="offer last">Многие компании, предлагая свои услуги, говорят о том, какие они классные. Мы в первую очередь думаем о вас и вашем комфорте от сотрудничества с SOHO. Поэтому мы расскажем о том, что вы получите, обратившись к нам.</div>
           </div>
         </div>
       </div>
@@ -329,16 +330,31 @@
           <div class="col-12 col-sm-4 col-lg-2"><a class="footer__email" href="mailto:work@websoho.ru">work@websoho.ru</a></div>
           <div class="col-12 col-xl-6 col-lg-6">
             <ul class="footer__navbar">
+              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Дизайн</a></li>
               <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Верстка и разработка</a></li>
-              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Реклама</a></li>
-              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Продвижение</a></li>
+              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Seo-продвижение</a></li>
+              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">ИНТЕРНЕТ МАРКЕТИНГ</a></li>
+              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">КОНТЕКСТНАЯ РЕКЛАМА</a></li>
               <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Портфолио</a></li>
               <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Блог</a></li>
-              <li class="footer__navbar__item last"><a class="footer__navbar__link" href="#">Дизайн</a></li>
             </ul>
           </div>
         </div>
       </div>
     </footer>
+    <svg class="go-to-top" x="0px" y="0px" viewBox="0 0 477.175 477.175" xml:space="preserve">
+      <g>
+        <path d="M145.188,238.575l215.5-215.5c5.3-5.3,5.3-13.8,0-19.1s-13.8-5.3-19.1,0l-225.1,225.1c-5.3,5.3-5.3,13.8,0,19.1l225.1,225   c2.6,2.6,6.1,4,9.5,4s6.9-1.3,9.5-4c5.3-5.3,5.3-13.8,0-19.1L145.188,238.575z"></path>
+      </g>
+    </svg>
+    <div class="modal modal_dark" id="callModal">
+      <p class="modal__title">Оставьте сообщение для нас и мы перезвоним</p>
+      <form class="form form_column" action="">
+        <input class="input-text" type="text" placeholder="Ваше имя" value=""/>
+        <input class="in-phone input-text" type="tel" placeholder="Контактный телефон" value=""/>
+        <textarea class="input-text" name="" placeholder="Опишите здесь, каких целей вы хотите достичь с помощью вашего сайта"></textarea>
+        <button class="btn btn_primary" type="submit">Обсудим проект</button>
+      </form>
+    </div>
   </body>
 </html>
