--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -96,25 +96,31 @@
     <div class="container post__container">
       <div class="row margin-bottom">
         <div class="col-9">
-          <h1 class="heading heading_blog">Самое актуальное в нашем блоге</h1>
+          <h1 class="heading heading_blog">Реализованные нами проекты</h1>
         </div>
         <div class="col-xl-3 col-md-5"><a class="post__item post__item_image" href="#" style="background-image: url('../images/belje-na-verevke.jpg')">
-            <div class="post__item__title">6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте</div>
+            <div class="post__item__title">САЙТ ДЛЯ WANTER</div>
+            <div class="post__item__intro">Переработка главной страницы сайта. Разработка дополнительных страниц под конкретные виды наружной рекламы и интерьерных решений</div>
             <div class="post__item__info">12.09.2018</div></a></div>
         <div class="col-xl-3 col-md-5"><a class="post__item post__item_image" href="#" style="background-image: url('../images/test-01.jpg')">
-            <div class="post__item__title">О&nbsp;чем нужно помнить, создавая уникальные тексты?</div>
+            <div class="post__item__title">САЙТ ДЛЯ WANTER</div>
+            <div class="post__item__intro">Переработка главной страницы сайта. Разработка дополнительных страниц под конкретные виды наружной рекламы и интерьерных решений</div>
             <div class="post__item__info">12.09.2018</div></a></div>
         <div class="col-xl-3 col-md-5"><a class="post__item post__item_image" href="#" style="background-image: url('../images/test-02.jpg')">
-            <div class="post__item__title">Продвижение сайта почти бесплатно</div>
+            <div class="post__item__title">САЙТ ДЛЯ WANTER</div>
+            <div class="post__item__intro">Переработка главной страницы сайта. Разработка дополнительных страниц под конкретные виды наружной рекламы и интерьерных решений</div>
             <div class="post__item__info">12.09.2018</div></a></div>
         <div class="col-xl-3 col-md-5"><a class="post__item post__item_image" href="#" style="background-image: url('../images/belje-na-verevke.jpg')">
-            <div class="post__item__title">6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте</div>
+            <div class="post__item__title">САЙТ ДЛЯ WANTER</div>
+            <div class="post__item__intro">Переработка главной страницы сайта. Разработка дополнительных страниц под конкретные виды наружной рекламы и интерьерных решений</div>
             <div class="post__item__info">12.09.2018</div></a></div>
         <div class="col-xl-3 col-md-5"><a class="post__item post__item_image" href="#" style="background-image: url('../images/test-01.jpg')">
-            <div class="post__item__title">О&nbsp;чем нужно помнить, создавая уникальные тексты?</div>
+            <div class="post__item__title">САЙТ ДЛЯ WANTER</div>
+            <div class="post__item__intro">Переработка главной страницы сайта. Разработка дополнительных страниц под конкретные виды наружной рекламы и интерьерных решений</div>
             <div class="post__item__info">12.09.2018</div></a></div>
         <div class="col-xl-3 col-md-5"><a class="post__item post__item_image" href="#" style="background-image: url('../images/test-02.jpg')">
-            <div class="post__item__title">Продвижение сайта почти бесплатно</div>
+            <div class="post__item__title">САЙТ ДЛЯ WANTER</div>
+            <div class="post__item__intro">Переработка главной страницы сайта. Разработка дополнительных страниц под конкретные виды наружной рекламы и интерьерных решений</div>
             <div class="post__item__info">12.09.2018</div></a></div>
       </div>
     </div>
