--- a/public/seo.html
+++ b/public/seo.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>SOHO студия</title>
+    <link href="./css/jquery.fancybox.min.css" rel="stylesheet"/>
     <link href="./css/jquery.jscrollpane.css" rel="stylesheet"/>
-    <link href="./css/style.min.css" rel="stylesheet"/>
+    <link href="./css/style.css" rel="stylesheet"/>
   </head>
   <body class="seo">
     <script src="./js/jquery.min.js"></script>
@@ -102,7 +103,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xl-6 col-md-8 col-10 offset-md-2 offset-xl-1">
-            <h1 class="heading">SEO-продвижение для&nbsp;бесплатного трафика</h1>
+            <h1 class="heading">SEO-продвижение сайта для&nbsp;бесплатного трафика</h1>
             <div class="offer last">Обеспечим поток посетителей на ваш сайт из&nbsp;Яндекс и&nbsp;Google</div>
           </div>
         </div>
@@ -120,7 +121,7 @@
           </div>
           <div class="col-xl-5 col-lg-5">
             <h3 class="heading heading_small">Зачем нужно SEO?</h3>
-            <p class="offer">Более 10 миллиардов запросов каждодневно вводится в поисковые системы для получения информации, услуг или покупки товаров. Более 2 триллионов сайтов в интернете. Использование поисковой оптимизации выведет ваш сайт на первые страницы Яндекса и Google по нужным ключевым словам (это те же запросы, которые вводят люди в поисковую строчку, например «купить диван спб»).</p>
+            <p class="offer">Более 10 миллиардов запросов каждодневно вводится в поисковые системы для получения информации, услуг или покупки товаров. Более 2 триллионов сайтов в интернете. Использование поисковой оптимизации выведет ваш сайт на первые страницы Яндекса и Google по нужным ключевым словам.</p>
             <p class="offer">Почему нужно быть на первых страницах выдачи? Вспомните, как часто вы заходите дальше 2 или 3 страницы в поиске? Рискнем предположить – крайне редко!</p>
           </div>
           <div class="col-xl-10 margin-top margin-top-sm-none">
@@ -228,29 +229,29 @@
         </div>
       </div>
     </div>
-    <div class="content content_project project">
+    <div class="content project">
       <div class="container">
         <div class="row">
           <div class="col-xl-10">
-            <h4 class="heading heading_medium margin-bottom">Проект по SEO-продвижению</h4>
-            <div class="offer">Один из последних проектов SOHO</div>
+            <h4 class="heading heading_medium">Проект по SEO-продвижению</h4>
+            <div class="offer">— посмотреть на <a href="#">все реализованные проекты SOHO</a></div>
           </div>
           <div class="col-xl-5">
-            <div class="project__task margin-bottom">
+            <div class="project__task">
               <div class="project__task__item">Задача</div>
               <div class="project__task__content"> 
-                <p class="offer">Сайт существовал уже несколько лет, но в поиске его практически не было ни по одному ключевому запросу. Клиентам хотелось увеличить базу клиентов и узнаваемость. По времени было дано 6 месяцев.</p>
+                <p class="offer last">Сайт существовал уже несколько лет, но в поиске его практически не было ни по одному ключевому запросу. Клиентам хотелось увеличить базу клиентов и узнаваемость. По времени было дано 6 месяцев.</p>
               </div>
             </div>
-            <div class="project__task margin-bottom">
+            <div class="project__task">
               <div class="project__task__item">Проблема</div>
               <div class="project__task__content"> 
-                <p class="offer">Был проведен комплексный аудит и выявлено, что SEO никогда не проводилось, а <span class="text-bold">посетители, которые заходили на сайт в 8 из 10 случаев быстро уходили.</span></p>
+                <p class="offer last">Был проведен комплексный аудит и выявлено, что SEO никогда не проводилось, а <span class="text-bold">посетители, которые заходили на сайт в 8 из 10 случаев быстро уходили.</span></p>
               </div>
             </div>
           </div>
           <div class="col-xl-5">
-            <div class="project__task margin-bottom">
+            <div class="project__task">
               <div class="project__task__item">Решение</div>
               <div class="project__task__content">
                 <p class="offer">Начали с технической оптимизации сайта, потому что без нее дальнейшие действия не имели смысла. </p>
@@ -262,7 +263,7 @@
         </div>
         <div class="row margin-bottom align-items-end">
           <div class="col-xl-10">
-            <p class="heading heading_small margin-bottom">Достигнутый эффект</p>
+            <p class="heading heading_small">Достигнутый эффект</p>
           </div>
           <div class="col-xl-5"> 
             <p class="offer">За первые два месяца сайт выведен в ТОП-10 по всем 20 согласованным ключам в Яндекс (плюс еще около 100 дополнительных). Далее все усилия делались на появлении результатов в Google, а также проработке ключевых запросов, которые дают больше всего заказов. </p>
@@ -273,7 +274,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-xl-6 col-lg-5"><img class="img-fluid margin-bottom-md" src="../images/default.png"/></div>
+          <div class="col-xl-6 col-lg-5"><img class="img-fluid img-border margin-bottom-md" src="../images/graphic-seo-portfolio.svg"/></div>
           <div class="col-xl-4 col-lg-5">
             <p class="offer text-bold text-uppercase">Что это значит?</p>
             <p class="offer">При увеличении посещаемости на 2537%, количество людей, которое уходило сразу, увеличилось на 0,78%. Мы привели на сайт только тех людей, кто интересовался данными услугами. </p>
@@ -323,8 +324,8 @@
         </div>
       </div>
       <div class="container content_price__container">
-        <div class="row">
-          <div class="col-xl-6 offset-xl-2 text-center">
+        <div class="row justify-content-center">
+          <div class="col-xl-5 text-center">
             <div class="heading heading_small">Что входит в тариф?</div>
             <div class="offer">Большинство предлагают стандартный набор услуг в зависимости от тарифа - это в корне неверный подход! Как можно предлагать один и тот же набор услуг для абсолютно разных сайтов?</div>
             <div class="subheading">оказываем только те услуги, которые действительно нужны для достижения цели! </div>
@@ -336,7 +337,7 @@
       <div class="container">
         <div class="row align-items-end">
           <div class="col-xl-6">
-            <h4 class="heading">Хотите, чтобы клиенты находили вас через Яндекс и Google?</h4>
+            <h4 class="heading heading_medium">Хотите, чтобы клиенты находили вас через Яндекс и Google?</h4>
             <form class="form form_inline" action="">
               <input class="in-phone input-text" type="tel" placeholder="Ваш контактный телефон" value=""/>
               <button class="btn btn_primary" type="submit">Конечно хочу</button>
@@ -372,16 +373,31 @@
           <div class="col-12 col-sm-4 col-lg-2"><a class="footer__email" href="mailto:work@websoho.ru">work@websoho.ru</a></div>
           <div class="col-12 col-xl-6 col-lg-6">
             <ul class="footer__navbar">
+              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Дизайн</a></li>
               <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Верстка и разработка</a></li>
-              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Реклама</a></li>
-              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Продвижение</a></li>
+              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Seo-продвижение</a></li>
+              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">ИНТЕРНЕТ МАРКЕТИНГ</a></li>
+              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">КОНТЕКСТНАЯ РЕКЛАМА</a></li>
               <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Портфолио</a></li>
               <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Блог</a></li>
-              <li class="footer__navbar__item last"><a class="footer__navbar__link" href="#">Дизайн</a></li>
             </ul>
           </div>
         </div>
       </div>
     </footer>
+    <svg class="go-to-top" x="0px" y="0px" viewBox="0 0 477.175 477.175" xml:space="preserve">
+      <g>
+        <path d="M145.188,238.575l215.5-215.5c5.3-5.3,5.3-13.8,0-19.1s-13.8-5.3-19.1,0l-225.1,225.1c-5.3,5.3-5.3,13.8,0,19.1l225.1,225   c2.6,2.6,6.1,4,9.5,4s6.9-1.3,9.5-4c5.3-5.3,5.3-13.8,0-19.1L145.188,238.575z"></path>
+      </g>
+    </svg>
+    <div class="modal modal_dark" id="callModal">
+      <p class="modal__title">Оставьте сообщение для нас и мы перезвоним</p>
+      <form class="form form_column" action="">
+        <input class="input-text" type="text" placeholder="Ваше имя" value=""/>
+        <input class="in-phone input-text" type="tel" placeholder="Контактный телефон" value=""/>
+        <textarea class="input-text" name="" placeholder="Опишите здесь, каких целей вы хотите достичь с помощью вашего сайта"></textarea>
+        <button class="btn btn_primary" type="submit">Обсудим проект</button>
+      </form>
+    </div>
   </body>
 </html>
